; ModuleID = '/home/carl/AnghaBench/linux/drivers/net/ethernet/pensando/ionic/extr_ionic_ethtool.c_ionic_get_strings.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/net/ethernet/pensando/ionic/extr_ionic_ethtool.c_ionic_get_strings.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.net_device = type { i32 }
%struct.ionic_lif = type { i32 }

@ionic_priv_flags_strings = common dso_local global i32 0, align 4
@PRIV_FLAGS_COUNT = common dso_local global i32 0, align 4
@ETH_GSTRING_LEN = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.net_device*, i32, i32*)* @ionic_get_strings to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @ionic_get_strings(%struct.net_device* %0, i32 %1, i32* %2) #0 {
  %4 = alloca %struct.net_device*, align 8
  %5 = alloca i32, align 4
  %6 = alloca i32*, align 8
  %7 = alloca %struct.ionic_lif*, align 8
  store %struct.net_device* %0, %struct.net_device** %4, align 8
  store i32 %1, i32* %5, align 4
  store i32* %2, i32** %6, align 8
  %8 = load %struct.net_device*, %struct.net_device** %4, align 8
  %9 = call %struct.ionic_lif* @netdev_priv(%struct.net_device* %8)
  store %struct.ionic_lif* %9, %struct.ionic_lif** %7, align 8
  %10 = load i32, i32* %5, align 4
  switch i32 %10, label %22 [
    i32 128, label %11
    i32 129, label %15
  ]

11:                                               ; preds = %3
  %12 = load %struct.ionic_lif*, %struct.ionic_lif** %7, align 8
  %13 = load i32*, i32** %6, align 8
  %14 = call i32 @ionic_get_stats_strings(%struct.ionic_lif* %12, i32* %13)
  br label %22

15:                                               ; preds = %3
  %16 = load i32*, i32** %6, align 8
  %17 = load i32, i32* @ionic_priv_flags_strings, align 4
  %18 = load i32, i32* @PRIV_FLAGS_COUNT, align 4
  %19 = load i32, i32* @ETH_GSTRING_LEN, align 4
  %20 = mul nsw i32 %18, %19
  %21 = call i32 @memcpy(i32* %16, i32 %17, i32 %20)
  br label %22

22:                                               ; preds = %3, %15, %11
  ret void
}

declare dso_local %struct.ionic_lif* @netdev_priv(%struct.net_device*) #1

declare dso_local i32 @ionic_get_stats_strings(%struct.ionic_lif*, i32*) #1

declare dso_local i32 @memcpy(i32*, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
